; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_genl.c_genl_send_simple.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_genl.c_genl_send_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_sock = type { i32 }
%struct.genlmsghdr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @genl_send_simple(%struct.nl_sock* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.nl_sock*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.genlmsghdr, align 4
  store %struct.nl_sock* %0, %struct.nl_sock** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.genlmsghdr, %struct.genlmsghdr* %11, i32 0, i32 0
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %12, align 4
  %14 = getelementptr inbounds %struct.genlmsghdr, %struct.genlmsghdr* %11, i32 0, i32 1
  %15 = load i32, i32* %9, align 4
  store i32 %15, i32* %14, align 4
  %16 = load %struct.nl_sock*, %struct.nl_sock** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @nl_send_simple(%struct.nl_sock* %16, i32 %17, i32 %18, %struct.genlmsghdr* %11, i32 8)
  ret i32 %19
}

declare dso_local i32 @nl_send_simple(%struct.nl_sock*, i32, i32, %struct.genlmsghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
